update buttons with link, fix blog spacing for media query

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body {
     font-family: 'Overlock', cursive;
 }
 
-.header-grid a:hover {
+.header-grid .header2 a:hover {
     background-color: rgb(168, 234, 250);
     color: black;
 }
@@ -126,6 +126,7 @@ img.logo {
       display: flex;
       flex-direction: column;
       grid-template-rows: 1fr 1fr;
+      width: 100%;
     }
 }
 
@@ -316,15 +317,11 @@ img.Lisa {
 
 @media (max-width: 930px) {
     .blog-grid {
-      flex-direction: column;
-      grid-template-rows: 1fr 1fr;
-      grid-template-columns: 1fr;
-      padding-top: 0px;
+        flex-direction: column;
+        grid-template-rows: 0.5fr 1fr;
+        grid-template-columns: 1fr;
+        padding-top: 0px;
     }
-
-    div.blog-content {
-        margin-top: 0px;
-    } /* this part not working */
 }
 
 .blog-content h1 {
@@ -341,6 +338,12 @@ img.Lisa {
     margin: auto;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+.blog-content.blog1 {
+    margin: 0px;
+    height: fit-content;
+    width: auto;
 }
 
 /* SECTION 6 CSS */
@@ -377,7 +380,7 @@ img.Lisa {
     margin: auto;
     height: 100%;
     width: auto;
-    background-color: rgb(58 9 85 / 72%);
+    background-color: rgb(58 9 85 / 75%);
 }
 
 /* FOOTER CSS */
